eliminated extra space beneath Dustjs <h1> (+1 squashed commit) Squashed commits: [98938a3] added margin to line numbers where code snippets are highlighted by coderay fixed helper API page issue with nested <ul> tags (+1 squashed commit) Squashed commits: [c501954] Un-fixing nav on desktop

--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -1,9 +1,9 @@
 nav {
   @include even-shadow($dark-shadow, $shadow-large-size);
-  width: $nav-width;
+  position: absolute;
   height: 100%;
+  width: $nav-width;
   background: $brand-graphite;
-  position: fixed;
   padding: 0 $nav-indent;
 
   ul.main-nav {
