--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -23,11 +23,12 @@ $header-margin-bottom: 34px;
 $content-margin-top: 122px;
 $content-h1-margin-bottom: 32px;
 $nested-api-list-margin-top: 15px;
+$coderay-line-number-margin: 10px;
 
 //////////////
 //Positions //
 //////////////
-$tagline-position-top: 36px;
+$tagline-position-top: 35px;
 $tagline-position-left: 300px;
 
 /////////////
